[package]
name = "howoldisyohan"
version = "0.1.0"
authors = ["tibo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name = "howoldisyohan"

[dependencies]
chrono = "0.4"
chrono-tz = "0.8.4"
clap = { version = "4.4.11", features = ["derive"] }
